@@ -1,3 +1,9 @@
+2007-11-28  Alexander Larsson  <alexl@redhat.com>
+
+	* glib/gstring.c (g_string_append_uri_escaped):
+	Move this function before g_string_append_c so that
+	we avoid the plt call due to the undefinf of g_string_append_c
+
 2007-11-28  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* gio/Makefile.am: Remove makegioalias.pl from the marshal files
